# jj-watch

./: Cargo.toml  README.md  flake.nix  package.nix
.github/workflows/: ci.yaml
src/: app.rs  args.rs  config.rs  main.rs
src/app/: log_widget.rs  status_line_widget.rs
