[package]
edition = "2024"
name = "jj-watch"
version = "0.1.0"

[dependencies]
ansi-to-tui = "7.0.0"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
miette = { version = "7.6", features = [ "fancy" ] }
ratatui = "0.29.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
